fix a height problem on small screens

--- a/css/main.css
+++ b/css/main.css
@@ -121,7 +121,7 @@ a:hover {
   text-decoration: none;
 }
 main {
-  height: 100vh;
+  min-height: 100vh;
   width: 100%;
 }
 .cards {
